--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -10942,7 +10942,7 @@ a leaner variant TDL-Lite [\cite{Artale07time}], where notions such as
 (some time) ``before'' are given a formal semantics of the intended
 meaning that the plain OWL Times human-readable object property does
 not have. The latter, then, would enable the modeler to represent the
-meaning---hence, restrict the possible models---and check the
+meaning --hence, restrict the possible models-- and check the
 consistency of the temporal constraints and so-called `evolution
 constraints' in the ontology (evolution constraints constrain
 membership of an object or an individual relation to a concept or
@@ -11278,7 +11278,7 @@ repository, which can be basically viewed as a directory in a file system.
 \texttt{ref/}-style IRIs accomplish this task.
 
 The \texttt{ref/\emph{argument}}-form is a prefix of the \emph{HIERARCHY},
-\emph{MEMBER} and \emph{COMMAND} components -- otherwise referred to as
+\emph{MEMBER} and \emph{COMMAND} components---otherwise referred to as
 unqualified loc/id, or in short: loc/id.
 
 \begin{itemize}
@@ -11321,7 +11321,7 @@ a specific version of a files using the \emph{Commit}, \emph{Branch} and
 
 \section{Disambiguation}
 
-If the \url{path/to/an-OMS} can actually also be a path to a directory  --
+If the \url{path/to/an-OMS} can actually also be a path to a directory --
 which would be possible if there were a directory named \textbf{pizza} and an
 ontology named \textbf{pizza.owl} -- will the loc/id be resolved to a
 disambiguating page.
@@ -11549,7 +11549,7 @@ one individual $a$ and the axiom $\top\sqsubseteq \{a\}$ expressing
 that the domain consists of a single point.  A propositional sentence
 (i.e.\ a Boolean combination of propositional variables) is mapped to
 membership of $a$ in the corresponding SROIQ(D) class term (i.e.\ a
-Boolean combination of atomic classes) --- note that this can be
+Boolean combination of atomic classes)---note that this can be
 expressed either as ABox statement $a:C$ or as TBox statement
 $\{a\}\subseteq C$. In order to translate an SROIQ(D) model, for each
 atomic class $A$ (resulting from a propositional variable $A$), $a:A$
