document numbers gefixt

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -601,9 +601,9 @@ Version \version
 \vskip 12pt 
 \nointerlineskip
 
-OMG Document Number: ad/15-06-04  \\ %ad/2015-05-03
+OMG Document Number: ad/2015-08-01  \\ %ad/2015-05-03 ad/15-06-04
 %Normative reference: \\
-Machine readable files (normative): ad/2015-xx-yy, ad/2015-xx-yy \ednote{FixMe}\\
+Machine readable files (normative): ad/2015-08-03, ad-2015-07-02\\
 %Normative: \\
 %Informative: \\
  
