--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8148,8 +8148,8 @@ standard vocabulary both as part of each signature and in the models.\ednote{Ref
 Actually, the standard vocabulary is given by a certain theory. In case
 of \RDF, it contains e.g.\ resources \texttt{rdf:type} and
 \texttt{rdf:Property} and \texttt{rdf:subject}, and sentences like, e.g.\
-$$(\texttt{rdf:type},\texttt{rdf:type},$ $ \texttt{rdf:Property}),$$ and 
-$$(\texttt{rdf:subject}, \texttt{rdf:type},$  $\texttt{rdf:Property}).$$
+$$(\texttt{rdf:type},\texttt{rdf:type},\texttt{rdf:Property}),$$ and 
+$$(\texttt{rdf:subject}, \texttt{rdf:type},\texttt{rdf:Property}).$$
 
 In the models, the standard vocabulary is interpreted with a fixed
 model.  Moreover, for each $\RDF$-model $M = \langle R_m, P_m, S_m,
